@@ -35,10 +35,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 }
 
-tasks.withType(Test) {
-    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
-}
-
 jacocoTestCoverageVerification {
     violationRules {
         rule {
@@ -48,7 +44,6 @@ jacocoTestCoverageVerification {
         }
     }
 }
-
 
 check.dependsOn "jacocoTestReport"
 build.dependsOn "jacocoTestCoverageVerification"
